openvino_bindings/src/bindings.h

typedef struct {
    const char* id;
    const char* name;
} Device;
typedef struct {
    int width;
    int height;
} CameraResolution;
typedef struct {
    int id;
    const char* name;
    CameraResolution* resolutions;
    int size;
} CameraDevice;
typedef struct {
    enum StatusEnum status;
    const char* message;
    const char* value;
} StatusOrString;
typedef struct {
    enum StatusEnum status;
    const char* message;
    TTIMetrics metrics;
    const char* value;
    int step;
    int num_step;
} StatusOrTTIModelResponse;
typedef struct {
    enum StatusEnum status;
    const char* message;
    float* value;
    int size;
} StatusOrEmbeddings;
typedef struct {
    enum StatusEnum status;
    const char* message;
    VLMMetrics metrics;
    const char* value;
} StatusOrVLMModelResponse;
typedef struct {
    enum StatusEnum status;
    const char* message;
    Device* value;
    int size;
} StatusOrDevices;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CameraDevice* value;
    int size;
} StatusOrCameraDevices;
typedef void (*ImageInferenceCallbackFunction)(StatusOrString*);
typedef void (*TTIInferenceCallbackFunction)(StatusOrTTIModelResponse*);
typedef void (*LLMInferenceCallbackFunction)(StatusOrString*);
typedef void (*VLMInferenceCallbackFunction)(StatusOrString*);