lib/interop/generated_bindings.dart


  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external TTIMetrics metrics;

  external ffi.Pointer<pkg_ffi.Utf8> value;

  @ffi.Int()
  external int step;

  @ffi.Int()
  external int num_step;
}

final class StatusOrEmbeddings extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external ffi.Pointer<ffi.Float> value;

  @ffi.Int()
  external int size;
}

final class StatusOrVLMModelResponse extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external VLMMetrics metrics;

  external ffi.Pointer<pkg_ffi.Utf8> value;
}

final class StatusOrDevices extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external ffi.Pointer<Device> value;

  @ffi.Int()
  external int size;
}

final class StatusOrCameraDevices extends ffi.Struct {
  @ffi.Int()
  external int statusAsInt;

  StatusEnum get status => StatusEnum.fromValue(statusAsInt);

  external ffi.Pointer<pkg_ffi.Utf8> message;

  external ffi.Pointer<CameraDevice> value;

  @ffi.Int()
  external int size;
}

typedef ImageInferenceCallbackFunctionFunction = ffi.Void Function(
    ffi.Pointer<StatusOrString>);
typedef DartImageInferenceCallbackFunctionFunction = void Function(
    ffi.Pointer<StatusOrString>);
typedef ImageInferenceCallbackFunction
    = ffi.Pointer<ffi.NativeFunction<ImageInferenceCallbackFunctionFunction>>;
typedef TTIInferenceCallbackFunctionFunction = ffi.Void Function(
    ffi.Pointer<StatusOrTTIModelResponse>);
typedef DartTTIInferenceCallbackFunctionFunction = void Function(
    ffi.Pointer<StatusOrTTIModelResponse>);
typedef TTIInferenceCallbackFunction
    = ffi.Pointer<ffi.NativeFunction<TTIInferenceCallbackFunctionFunction>>;
typedef LLMInferenceCallbackFunctionFunction = ffi.Void Function(
    ffi.Pointer<StatusOrString>);
typedef DartLLMInferenceCallbackFunctionFunction = void Function(
    ffi.Pointer<StatusOrString>);
typedef LLMInferenceCallbackFunction
    = ffi.Pointer<ffi.NativeFunction<LLMInferenceCallbackFunctionFunction>>;
typedef VLMInferenceCallbackFunctionFunction = ffi.Void Function(
    ffi.Pointer<StatusOrString>);
typedef DartVLMInferenceCallbackFunctionFunction = void Function(
    ffi.Pointer<StatusOrString>);
typedef VLMInferenceCallbackFunction
    = ffi.Pointer<ffi.NativeFunction<VLMInferenceCallbackFunctionFunction>>;
